# apple-music-obs-overlay

./: .gitignore  LICENSE  README.ja.md  README.md  nowplaying.py  overlay.html  pyproject.toml
docs/: nowplaying-json.md
packaging/windows/: OBSAppleMusicProgressBar.spec  README.txt
scripts/: build-windows.ps1
src/apple_music_obs_overlay/: __init__.py  cli.py  output.py  payload.py  poller.py  server.py
src/apple_music_obs_overlay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/apple_music_obs_overlay/artwork/: __init__.py  image.py  itunes.py
src/apple_music_obs_overlay/providers/: __init__.py  base.py  demo.py  macos_music.py  windows_media.py
tests/: test_cli_paths.py  test_output.py  test_poller.py  test_windows_media.py
