[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-music-obs-overlay"
version = "0.2.0"
description = "Apple Music / now-playing OBS overlay backend"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
windows = [
  "winsdk>=1.0.0b10; platform_system == 'Windows'",
]

[project.scripts]
apple-music-obs-overlay = "apple_music_obs_overlay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/apple-music-obs-overlay" = ["overlay.html"]
